--- a/contact-app/package.json
+++ b/contact-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "dotenv": "^16.4.7",
     "openai": "^4.83.0",
     "react": "^19.0.0",
