--- a/contact-app/package.json
+++ b/contact-app/package.json
@@ -1,32 +1,28 @@
 {
   "name": "contact-app",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bunx --bun vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --fix",
+    "dev": "vite",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@vercel/analytics": "^1.4.1",
-    "dotenv": "^16.4.7",
+    "@vercel/analytics": "^1.5.0",
     "openai": "^4.83.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react-swc": "^3.8.0",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
+    "@vercel/node": "^5.1.2",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@rollup/rollup-linux-x64-gnu": "4.6.1",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "vite": "^4.5.2"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
   }
 }
