--- a/contact-app/tsconfig.json
+++ b/contact-app/tsconfig.json
@@ -14,7 +14,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "rootDir": "./api",
+    "outDir": "./build"
   },
   "include": ["src", "api"],
   "references": [{ "path": "./tsconfig.node.json" }]
