--- a/contact-app/package.json
+++ b/contact-app/package.json
@@ -11,7 +11,8 @@
     "@vercel/analytics": "^1.5.0",
     "openai": "^4.83.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "weave": "^0.7.5"
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
