--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@vercel/node": "^5.1.2",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "litellm": "^0.12.0",
+    "vercel": "^41.1.4",
     "weave": "^0.7.5"
   },
   "devDependencies": {
