--- a/contact-app/.eslintrc.json
+++ b/contact-app/.eslintrc.json
@@ -15,11 +15,7 @@
     "sourceType": "module",
     "project": "./tsconfig.json"
   },
-  "plugins": [
-    "@typescript-eslint",
-    "react",
-    "react-hooks"
-  ],
+  "plugins": ["@typescript-eslint", "react", "react-hooks"],
   "rules": {
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
@@ -32,4 +28,4 @@
       "version": "detect"
     }
   }
-} 
+}
